Fix a overflow problem with long HE descriptions
git-svn-id: http://agilefant.googlecode.com/svn/trunk@1260 29784df9-99d5-7e28-3e6c-ac1830307ffc

--- a/web/static/css/import.css
+++ b/web/static/css/import.css
@@ -929,6 +929,8 @@ table.reportTable tr td.hourentry {
 
 table.reportTable tr td.hourentry.first {
 	padding-left:30px;
+	overflow:hidden;
+	max-width:300px;
 }
 
 table.reportTable tr td.hourentry.second {
